src/test/ui/closures/closure-signature/unspecified-output.stderr
error[E0282]: type annotations needed for the closure `fn(i32, &i32) -> Vec<_>`
  --> $DIR/unspecified-output.rs:2:31
   |
LL |     let a = |a: i32, b: &i32| Vec::new();
   |                               ^^^^^^^^ cannot infer type for type parameter `T`
   |
help: give this closure an explicit return type without `_` placeholders
   |
LL |     let a = |a: i32, b: &i32| -> Vec<_> { Vec::new() };
   |                               +++++++++++            +

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
