src/test/ui/closures/closure-signature/unspecified-output.rs
fn main() {
    let a = |a: i32, b: &i32| Vec::new(); //~ ERROR E0282
}
